# utils-aws-devops

./: .gitignore  README.md
agentic-infra-manager/: Dockerfile  Makefile  README.md  TERRAFORM_BACKEND_FIX.md  analysis.json  complete-plan.json  debug_analysis.py  full-results.json  learning-ai-agents-dev.json  learning-ai-agents-prod.json  prod-plan.json  pyproject.toml  readme-test.json  real-results.json  requirements.txt  results.json  test-terraform-complete.json  test-terraform-final-working.json  test-terraform-final.json  test-terraform-fixed.json  test-terraform-skip-diagrams.json  test-terraform-success.json  test-terraform-working.json  test-terraform.json  test_analysis.py  workflow-example.json
agentic-infra-manager/config/: agent.yaml
agentic-infra-manager/examples/: basic_usage.py
agentic-infra-manager/src/agentic_infra_manager/: __init__.py  cli.py
agentic-infra-manager/src/agentic_infra_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic-infra-manager/src/agentic_infra_manager/core/: agent.py  config.py  state.py
agentic-infra-manager/src/agentic_infra_manager/modules/: __init__.py  iac_generator.py  infrastructure_planner.py  kubernetes_manager.py  repository_analyzer.py  security_manager.py  terraform_deployer.py  visualization.py
agentic-infra-manager/tests/: test_agent.py
